--- a/w03/d1/workshop/index.html
+++ b/w03/d1/workshop/index.html
@@ -10,7 +10,9 @@
 
     <div class= "box" id="one">
         <div class="pic"> <img src="ikutoPirate.jpg" alt="Ikuto as a pirate."></div>
-    </div>
+  <div class="textRight"><p> Ikuto is has a Cat Chara and is one of the two love interests of the main character.<br> He is quiet but also a bully. He has a sister that loves him a bit too much,</br> but it's ok because she is a popstar and she gets away with everything.
+  </p></div>
+  </div>
 
     <div class= "box" id="two">
 
@@ -19,7 +21,10 @@
     <div class= "box" id="three">
         <div class="pic">
           <img src="ikutoLight.jpg" alt="Ikuto and the Prince kid side by side."></div>
-    </div>
+          <div class="textRight"><p> Ikuto is has a Cat Chara and is one of the two love interests of the main character. He is quiet but also a bully. He has a sister that loves him a bit too much, but it's ok because she is a popstar and she gets away with everything.
+          </p>
+        </div>
+        </div>
 
     <div class= "box" id="four">
 
