workshop and morning exercise

--- a/w03/d4/workshop/index.html
+++ b/w03/d4/workshop/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="main.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-
+  <body><center>
+    <div id= "divKitty">
+      <img id="img_cat" src="http://home.bt.com/images/google-136424673265702601-180129122227.jp" alt="cat" id="img_cat">
+     </div>
+<button onclick="kittyGenerate()">Cat Generate</button>
+</center>
     <script src="data.js"></script>
-    <script src="index.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
